--- a/src/components/hamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/hamburgerMenu/HamburgerMenu.module.css
@@ -19,4 +19,12 @@
     width: 100%;
     height: 100%; }
 
+.hamburger-menu-dark:hover, .hamburger-menu-dark:active {
+  background-color: #ddd !important; }
+
+@media (min-width: 77em) {
+  .hamburger-menu {
+    width: 5rem;
+    padding: 1rem 0; } }
+
 /*# sourceMappingURL=HamburgerMenu.module.css.map */
