--- a/src/components/inputBox/InputBox.module.css
+++ b/src/components/inputBox/InputBox.module.css
@@ -18,7 +18,7 @@
   .inputbox-container__error {
     font-size: 1.4rem;
     letter-spacing: 0.05rem;
-    color: #ff2e2e;
+    color: red;
     font-weight: 400;
     margin-top: 1rem; }
   .inputbox-container__success {
