--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -22,8 +22,9 @@
 }
 
 //general button mixins
-@mixin btn-reset() {
+@mixin button-reset() {
   all: unset;
+  font-family: inherit;
 }
 
 //unordered list mixins
