--- a/src/components/submitButton/SubmitButton.module.scss
+++ b/src/components/submitButton/SubmitButton.module.scss
@@ -3,7 +3,7 @@
 
 .submit-button {
   button {
-    @include btn-reset();
+    @include button-reset();
     color: $white;
     font-size: 1.45rem;
     padding: 1.5rem;
@@ -13,7 +13,6 @@
     text-decoration: none;
     transition: all 0.2s;
     background-color: $primary;
-    font-family: inherit;
   }
 
   button:disabled {
