create separate closeicon component and a reducer for login signup component's functionality. Refator code functionality in loginsignup context, component, reducer to keep the code dry and lean

--- a/src/components/loginSignup/LoginSignup.module.css
+++ b/src/components/loginSignup/LoginSignup.module.css
@@ -3,18 +3,40 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-150%, -50%);
+          transform: translate(-150%, -50%);
   z-index: 1001;
-  background-color: rgba(34, 34, 34, 0.85);
+  background-color: #222222;
   -webkit-backdrop-filter: blur(0.4rem);
           backdrop-filter: blur(0.4rem);
-  padding: 3rem; }
+  padding: 0 3rem 3rem;
+  visibility: collapse;
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out; }
+  .login-signup-main__open {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+  .login-signup-main__close-icon-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin: 2.5rem 0 2.5rem; }
   .login-signup-main__form-heading {
     color: #fff;
     font-size: 2.4rem;
     font-weight: 400;
-    margin-bottom: 3rem; }
+    margin-bottom: 3rem;
+    letter-spacing: 0.02rem; }
   .login-signup-main__form__inputs-container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -23,7 +45,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 1.5rem;
+    gap: 2rem;
     margin-bottom: 2rem; }
     .login-signup-main__form__inputs-container label {
       font-size: 1.4rem; }
@@ -31,21 +53,22 @@
         font-weight: 500;
         margin-bottom: 1rem; }
   .login-signup-main__form__switch-button-container {
-    margin-bottom: 3rem; }
-    .login-signup-main__form__switch-button-container > div {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      gap: 1.25rem; }
+    margin-bottom: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1.2rem; }
     .login-signup-main__form__switch-button-container button {
       all: unset;
+      display: inline-block;
       font-family: inherit;
-      color: #fff;
-      font-size: 1.3rem;
+      color: #0099a8;
+      font-size: 1.4rem;
+      font-weight: 500;
       letter-spacing: 0.02rem; }
 
 /*# sourceMappingURL=LoginSignup.module.css.map */
